@@ -1,1 +1,1 @@
-<%= field.data %>
+<%= field.truncate %>
