@@ -3,6 +3,15 @@ require_relative "base"
 module Administrate
   module Field
     class String < Field::Base
+      def truncate
+        data[0...truncation_length]
+      end
+
+      private
+
+      def truncation_length
+        options.fetch(:truncate, 50)
+      end
     end
   end
 end
